--- a/index.html
+++ b/index.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechSolutions</title>
 </head>
+
 <body>
-<h1>TechSolutions</h1>
-<h2>Quem somos</h2>
-<p>
-    A <strong>TechSolutions</strong> é uma empresa especializada em soluções tecnológicas inovadoras para negócios de todos os portes. 
-    Oferecemos serviços de alta qualidade para ajudar sua empresa a crescer no ambiente digital.
-</p>
-<h2>Serviços Oferecidos</h2>
-<ul>
-    <li>Desenvolvimento de Software Sob Medida</li>
-    <li>Consultoria em Transformação Digital</li>
-    <li>Suporte e Manutenção de Sistemas</li>
-</ul>
-<h2>Nossa Equipe</h2>
-<ol>
-    <li>Levi São Pedro - Engenheiro de Software Sênior</li>
-    <li>Ana Carolina Dos Santos - Gerente de Projetos</li>
-</ol>
-<h2>Contatos</h2>
-<p>
-    E-mail: techsolution25@gmail.com<br>
-    Telefone: (71)3342-7758
-</p>
-<h2>Nosso Trabalho</h2>
-<img src="solucoes-de-TI-para-o-e-commerce.jpg" alt="Imagem representando tecnologia e soluções de TI"  width="600px" >
-<h2>Conecte-se Conosco</h2>
-<p>
-    <a href="https://www.linkedin.com/company/techsolutions" target="_blank">Nosso LinkedIn</a><br>
-    <a href="https://www.google.com/maps" target="_blank">Veja nossa localização no Google Maps</a>
-</p>
+    <h1>TechSolutions</h1>
+    <h2>Quem somos</h2>
+    <p>
+        A <strong>TechSolutions</strong> é uma empresa especializada em soluções tecnológicas inovadoras para negócios
+        de todos os portes.
+        Oferecemos serviços de alta qualidade para ajudar sua empresa a crescer no ambiente digital.
+    </p>
+    <h2>Serviços Oferecidos</h2>
+    <ul>
+        <li>Desenvolvimento de Software Sob Medida</li>
+        <li>Consultoria em Transformação Digital</li>
+        <li>Suporte e Manutenção de Sistemas</li>
+    </ul>
+    <h2>Nossa Equipe</h2>
+    <ol>
+        <li>Levi São Pedro - Engenheiro de Software Sênior</li>
+        <li>Ana Carolina Dos Santos - Gerente de Projetos</li>
+    </ol>
+    <h2>Contatos</h2>
+    <p>
+        E-mail: techsolution25@gmail.com<br>
+        Telefone: (71)3342-7758
+    </p>
+    <h2>Nosso Trabalho</h2>
+    <img src="solucoes-de-TI-para-o-e-commerce.jpg" alt="Imagem representando tecnologia e soluções de TI"
+        width="600px">
+    <h2>Conecte-se Conosco</h2>
+    <p>
+        <a href="https://www.linkedin.com/company/techsolutions" target="_blank">Nosso LinkedIn</a><br>
+        <a href="https://www.google.com/maps" target="_blank">Veja nossa localização no Google Maps</a>
+    </p>
 </body>
+
 </html>
