--- a/Index3.html
+++ b/Index3.html
@@ -38,7 +38,7 @@
     <h2>Conecte-se Conosco</h2>
     <p>
         <a href="https://www.linkedin.com/company/techsolutions" target="_blank">Nosso LinkedIn</a><br>
-        <a href="https://www.google.com/maps" target="_blank">Veja nossa localização no Google Maps</a>
+        <a href="https://maps.app.goo.gl/y9Ry9ota5pQ1FbYEA" target="_blank">Veja nossa localização no Google Maps</a>
     </p>
 </body>
 
